--- a/index.html
+++ b/index.html
@@ -6,24 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style/index.css" />
+    <script src="https://kit.fontawesome.com/b760ce3519.js"></script>
   </head>
   <body>
     <div class="containerGallery">
       <h1>MA GALLERIE (V3)</h1>
       <div class="monCache">
         <div class="containerImg">
-          <img src="img/01.jpg" alt="" /><img src="img/02.jpg" alt="" /><img
-            src="img/03.jpg"
-            alt=""
-          /><img src="img/04.jpg" alt="" /><img src="img/05.jpg" alt="" /><img
-            src="img/06.jpg"
-            alt=""
-          /><img src="img/07.jpg" alt="" /><img src="img/08.jpg" alt="" />
+          <img src="img/01.jpg" alt="" />
+          <img src="img/02.jpg" alt="" />
+          <img src="img/03.jpg" alt="" />
+          <img src="img/04.jpg" alt="" />
+          <img src="img/05.jpg" alt="" />
+          <img src="img/06.jpg" alt="" />
+          <img src="img/07.jpg" alt="" />
+          <img src="img/08.jpg" alt="" />
         </div>
       </div>
       <div class="btn-container">
-        <div><<</div>
-        <div>>></div>
+        <div><i class="fas fa-backward"></i></div>
+        <div><i class="fas fa-play"></i></div>
+        <div><i class="fas fa-forward"></i></div>
       </div>
     </div>
   </body>
