--- a/index.html
+++ b/index.html
@@ -12,14 +12,38 @@
     <div class="containerGallery">
       <div class="monCache">
         <div class="containerImg">
-          <img src="img/01.jpg" alt="" />
-          <img src="img/02.jpg" alt="" />
-          <img src="img/03.jpg" alt="" />
-          <img src="img/04.jpg" alt="" />
-          <img src="img/05.jpg" alt="" />
-          <img src="img/06.jpg" alt="" />
-          <img src="img/07.jpg" alt="" />
-          <img src="img/08.jpg" alt="" />
+          <div class="test">
+            <div class="capture">Description #1 image</div>
+            <img src="img/01.jpg" />
+          </div>
+          <div class="test">
+            <div class="capture">Description #2 image</div>
+            <img src="img/02.jpg" />
+          </div>
+          <div class="test">
+            <div class="capture">Description #3 image</div>
+            <img src="img/03.jpg" />
+          </div>
+          <div class="test">
+            <div class="capture">Description #4 image</div>
+            <img src="img/04.jpg" />
+          </div>
+          <div class="test">
+            <div class="capture">Description #5 image</div>
+            <img src="img/05.jpg" />
+          </div>
+          <div class="test">
+            <div class="capture">Description #6 image</div>
+            <img src="img/06.jpg" />
+          </div>
+          <div class="test">
+            <div class="capture">Description #7 image</div>
+            <img src="img/07.jpg" />
+          </div>
+          <div class="test">
+            <div class="capture">Description #8 image</div>
+            <img src="img/08.jpg" />
+          </div>
         </div>
       </div>
       <div class="btn-container">
