--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div class="capture">Description #5 image</div>
             <img src="img/05.jpg" />
           </div>
+          <!--
           <div class="test">
             <div class="capture">Description #6 image</div>
             <img src="img/06.jpg" />
@@ -43,10 +44,10 @@
           <div class="test">
             <div class="capture">Description #8 image</div>
             <img src="img/08.jpg" />
-          </div>
+          </div>-->
         </div>
       </div>
-      <div class="btn-container">
+      <div class="btn-container  ">
         <div><i class="fas fa-backward"></i></div>
         <div><i class="fas fa-play"></i></div>
         <div><i class="fas fa-forward"></i></div>
